--- a/Dastan.csproj
+++ b/Dastan.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <RootNamespace>kvm_csharp/src</RootNamespace>
+    <RootNamespace>Dastan/src</RootNamespace>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
